# Diabetes-Prediction-and-Healthy-Foods-Suggestion-System

./: .replit  AppliedStatisticsWithPython.ipynb  db.sqlite3  pyproject.toml  replit.nix
diabetes/: admin.py  models.py  urls.py  views.py
diabetes/migrations/: 0001_initial.py  0002_alter_diabetes_result.py  0003_auto_20231213_0326.py
diabetes/templates/diabetes/: calorie_calc.html  history.html  input1.html  login.html  profile.html  registration.html  test_result.html
django_project/: settings.py  urls.py
static/: calorie_calc.css  history.css  index.css  input1.css  login.css  pro_file.css  registration.css
templates/: index.html
