[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
pickle-mixin = "^1.0.2"
joblib = "^1.2.0"
pandas = "2.0.2"
jax = "0.4.13"
tensorflow = "2.12.0"
torch = "2.0.1"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.2"
[tool.poetry.dev-dependencies]
